--- a/.github/workflows/sing.yml
+++ b/.github/workflows/sing.yml
@@ -88,7 +88,7 @@ jobs:
       GOAMD64: ${{ matrix.goamd64 }}
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
-      CGO_ENABLED: 0
+      CGO_ENABLED: ${{ matrix.goos == 'android' && 1 || 0 }}
       puernya_TAGS: ${{ needs.puernya.outputs.puernya_tags }}
       puernya_VERSION: ${{ needs.puernya.outputs.puernya_version }}
     steps:
